# trident-consumption-graph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: app.py
demo/scenarios/: kannada_multiorder.json  thursday_biryani.json  weekend_restock.json
demo/ui/: App.jsx
docs/: Moxey Test  architecture.md  demo-script.md  doordash-comparison.md  graph-schema.md  trident-ensemble.md
notebooks/: 01_graph_construction.ipynb  02_pyg_training.ipynb  03_dgl_training.ipynb  04_xgboost_features.ipynb  05_ensemble_ablation.ipynb  06_cross_domain_demo.ipynb
src/bgi_trident/: config.py
src/bgi_trident/agents/: base.py  dineout.py  food.py  instamart.py
src/bgi_trident/graph/: builder.py  schema.py  updater.py
src/bgi_trident/graph/dgl/: embeddings.py  link_predict.py  model.py  temporal.py
src/bgi_trident/graph/ensemble/: ablation.py  calibration.py  stacker.py
src/bgi_trident/graph/pyg/: embeddings.py  link_predict.py  model.py
src/bgi_trident/graph/xgboost/: features.py  model.py
src/bgi_trident/mcp/: dineout_server.py  food_server.py  instamart_server.py  protocol.py
src/bgi_trident/nlu/: codemix.py  entities.py  intent.py
src/bgi_trident/orchestrator/: confirmation.py  coordinator.py  fallback.py  state.py
src/bgi_trident/voice/: protocol.py
src/data/: bangalore_products.csv  bangalore_restaurants.csv  bangalore_users.csv  bangalore_venues.csv  generate_graph.py
src/data/interactions/: dineout_bookings.csv  food_orders.csv  instamart_orders.csv
tests/: conftest.py  test_agents.py  test_confirmation_gate.py  test_dgl_model.py  test_ensemble.py  test_fallback.py  test_graph_builder.py  test_orchestrator.py  test_pyg_model.py  test_voice_protocol.py  test_xgboost_features.py
(+11 files in other folders)
