[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bgi-trident"
version = "0.1.0"
description = "Autonomous consumption agent: Three-prong ensemble (PyG + DGL + XGBoost) with multi-agent orchestration for Swiggy MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Abhinav Khare", email = "khare.abhinav@gmail.com"},
]

dependencies = [
    # Prong 1: PyG (structural embeddings)
    "torch>=2.1.0",
    "torch-geometric>=2.5.0",

    # Prong 2: DGL (temporal-behavioral embeddings)
    "dgl>=2.1.0",

    # Prong 3: XGBoost (tabular features)
    "xgboost>=2.0.0",

    # Ensemble
    "scikit-learn>=1.4.0",

    # Graph + data
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "networkx>=3.2",

    # API + orchestration
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
]

[tool.ruff]
target-version = "py310"
line-length = 140          # ← Change from 100 (or 120) to 140

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["F821", "N812", "N806", "SIM102", "SIM108"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
warn_return_any = false
ignore_errors = true
